// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value if report is not present 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="ocp_dashboard.total_cost_tooltip"
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="top"
      tippyProps={Object {}}
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <div
        className="css-1w8hocc"
      >
        <Component />
      </div>
    </Tooltip>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;

exports[`defaults value if report.meta is not present 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="ocp_dashboard.total_cost_tooltip"
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="top"
      tippyProps={Object {}}
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <div
        className="css-1w8hocc"
      >
        <Component />
      </div>
    </Tooltip>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;

exports[`report total is formated 1`] = `
<Fragment>
  <div
    className="css-ajqdbs"
  >
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="ocp_dashboard.total_cost_tooltip"
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="top"
      tippyProps={Object {}}
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <div
        className="css-1w8hocc"
      >
        formatedValue
      </div>
    </Tooltip>
    <div
      className="css-1640ajm"
    >
      <div />
    </div>
  </div>
</Fragment>
`;
